name:                courier
version:             0.1.0.0
synopsis:            Type-safe database access 
description:         Please see README.md
homepage:            http://github.com/githubuser/courier#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin Kovach 
maintainer:          benjamin@kovach.me
copyright:           2010 Benjamin Kovach 
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple
                     , text
  default-language:    Haskell2010

executable courier-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , courier
  default-language:    Haskell2010

test-suite courier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , courier
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/courier
